Update collections to use modern factory methods
Replaces Arrays.asList() with List.of() for creating immutable lists
and updates empty array initialization to use modern syntax. This
improves performance and readability.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>